--- a/peer-eval-backend/.gitignore
+++ b/peer-eval-backend/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+!../../peer-evaluation/peer-eval-backend/.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
