--- a/peer-eval-backend/src/main/resources/application.properties
+++ b/peer-eval-backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=peer-eval-backend
 
-spring.mail.host=smtp.email.com
-spring.mail.port=
-spring.mail.username=your-username@email.com
-spring.mail.password=your-password
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
