--- a/peer-eval-backend/pom.xml
+++ b/peer-eval-backend/pom.xml
@@ -47,6 +47,15 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>3.2.3</version>
         </dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	
    <dependency>
      <groupId>org.apache.commons</groupId>
