--- a/peer-eval-backend/pom.xml
+++ b/peer-eval-backend/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	
    <dependency>
      <groupId>org.apache.commons</groupId>
